--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Mis Favoritos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,200&family=Montserrat:ital,wght@1,100&family=Noto+Sans+JP:wght@500&family=Oswald:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <header>
@@ -33,7 +36,7 @@
         <div class="favorite">
             <img src="imagen4.jpg" alt="Imagen 4">
             <h2>Comida Preferida: Los Ñoquis</h2>
-            <p>.</p>
+            <p>Los ñoquis resultan la pasta más difícil de identificar. Todo lo que tenga masa y algo de forma y esté cocido en agua, se puede llamar un ñoqui. Sin embargo, es el plato favorito de los niños, porque son sencillos y sabrosos</p>
         </div>
     </section>
 </body>
